--- a/scripts/dispatch_sept6.Rmd
+++ b/scripts/dispatch_sept6.Rmd
@@ -8,6 +8,7 @@ Downloaded on 9/6/2023 for the previous 3 years (9/6/2020 - 9/6/2023)
 
 ```{r}
 library(tidyverse)
+library(lubridate)
 ```
 
 Bring in the data: 
@@ -43,3 +44,131 @@ How many categories are in the ExtNatureDisplayName column? Which is the most co
 Which day of the week has the most dispatches? 
 Which PolArea had the most dispatches? 
 Think like a journalist and come up with five questions you want to ask this data. 
+
+
+-- In place of class on Sept 11, go through this code -- 
+
+It's always a good practice to use the count() function on categorical variables and the range() function on continuous variables (numbers and dates). This gives you a sense of what's in your data, where messy data might be, what the earliest and latest dates are, the smallest and largest numbers, etc. 
+
+```{r}
+# We used count() on `InNum` earlier, to identify that there are some duplicates. 
+dispatch %>% 
+  count(InNum) %>% 
+  arrange(desc(n))
+```
+
+Working with dates:
+
+```{r}
+# The next column, CallDateTime, looks like a continuous variable, but it is stored as "character" (always pay attention to how variables are stored). Note that when you sort by CallDateTime first ascending and then descending you can see that the dates are not sorting correctly: 
+dispatch %>% 
+  count(CallDateTime) %>% 
+  arrange(CallDateTime)
+
+dispatch %>% 
+  count(CallDateTime) %>% 
+  arrange(desc(CallDateTime))
+
+# the solution: convert `CallDateTime` into a true date. To do this, we'll use the lubridate package. This package has a series of functions to manipulate dates. We'll go over this package in more detail later, but for now, we'll use the function mdy_hms()
+
+dispatch %>% 
+  mutate(new_date = mdy_hms(CallDateTime)) %>%
+  select(CallDateTime, new_date)
+# Note that POSIXct is a date datatype in R. 
+
+# To make this transformed date column permanent, we need to overwrite our original variable, `dispatch`: 
+dispatch <- dispatch %>% 
+  mutate(new_date = mdy_hms(CallDateTime))
+
+# Now, look for the earliest and latest date in our data. You can do this by sorting one way and then the other, or you can use the range() function. This is a summary function, like sum() and mean(), and can be used this way: 
+range(dispatch$new_date)
+
+# Note from the output that the earliest date is 9/6/2022 and the latest date is 9/6/2023: the website only let us download one year of data, even though we requested three. It's always a good idea to check the date range of your data. 
+```
+
+The `Address` column isn't really a categorical variable; I would expect there to be repeats, especially since they aren't exact addresses, only blocks; and you can also tell that the column is pretty messy. So you could run a count() on this but it won't necessarily tell you much, except perhaps if there is one or more hotspots with a lot of calls: 
+```{r}
+dispatch %>% 
+  count(Address) %>% 
+  arrange(desc(n))
+
+#In fact there is one block that really stands out: the 600 block of E Walnut. Which is where the police station is located.
+```
+
+Next: `ExtNatureDisplayName`. This is a categorical variable, we expect there to be buckets that describe the different types of reasons for the dispatch:
+```{r}
+dispatch %>% 
+  count(ExtNatureDisplayName)
+
+# Looking through this list you can see it's mostly clean, though there's a misspelling on "BURGLARY"... there are also a lot of unhelpful descriptions, such as "ASSIST CITIZEN" and "CHECK SUBJECT." We don't really know what those mean. It'd be a good idea to ask the police department if they clearly define these categories. 
+
+# Which is the most common?
+dispatch %>% 
+  count(ExtNatureDisplayName) %>% 
+  arrange(desc(n))
+
+# 911 Checks.
+```
+
+The `Report` column clearly has a lot of nulls, which show up as *NA* in R. This likely means that no official report was created; where there is a report, there is an entry:
+```{r}
+dispatch %>% 
+  count(Report) %>% 
+  arrange(desc(n))
+
+# The vast majority don't result in police reports: 75,267.
+
+# To filter for NAs in R, there is a specific function you need to use: is.na():
+
+dispatch %>% 
+  filter(is.na(Report))
+
+# this returns all the rows where `Report` is NA. To find those that are NOT NA, add ! in front of the function: 
+
+dispatch %>% 
+  filter(!is.na(Report))
+# There are 10,545 dispatches that resulted in a report.
+```
+
+`PolArea` is a code that corresponds to a particular geographic area in Columbia. 
+```{r}
+dispatch %>% 
+  count(PolArea) %>% 
+  arrange(desc(n))
+```
+
+The final two columns relate to the date and time of the dispatch: `DOW` (day of the week) and `Hour`:
+```{r}
+dispatch %>% 
+  count(DOW)
+# this column is clean and fairly evenly distributed
+
+dispatch %>% 
+  count(Hour)
+# dispatches peak around 3 pm
+```
+
+We'll go over your questions of this data in class on Wednesday, 9/13.
+
+What day/time is the most dangerous? 
+```{r}
+dispatch %>% 
+  count(DOW, Hour) %>% 
+  arrange(desc(n))
+
+dispatch %>% 
+  count(month(new_date)) %>% 
+  arrange(desc(n))
+```
+
+What areas/neighborhoods get the most dispatches? 
+```{r}
+dispatch %>% 
+  count(PolArea) %>% 
+  arrange(desc(n))
+
+dispatch %>% 
+  count(Address) %>% 
+  arrange(desc(n))
+```
+
